# anitomy-rust

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  clean_test.py
.github/workflows/: audit.yml  build.yml  formating.yml
src/: chunk.rs  elements.rs  errors.rs  extension.rs  keyword.rs  lib.rs  parsing.rs  split.rs  tokenizer.rs  traits.rs  utils.rs
src/parsing/: episode.rs  extensions.rs  keywords.rs  mod.rs  number.rs  string.rs  title.rs
src/token/: main_token.rs  mod.rs  subtoken.rs
tests/: elements.rs  entity.rs  extensions.rs  extract.rs  get_extensions.rs  keyword.rs  parse_number.rs  parser.rs  parsing.rs  parsing_function.rs  parsing_test.rs  real_data_001.rs  real_data_002.rs  real_data_003.rs  real_data_004.rs  remove_extensions.rs  split.rs  token.rs  tokenizer.rs  utils.rs
