[package]
name = "anitomy-rust"
version = "0.0.4"
edition = "2021"
authors = ["Sans-Atout <augustin.rousset-rouviere@isep.fr>"]
license = "MPL-2.0"

keywords = ["anitomy", "anime", "filenames", "parsing"]
categories = ["parsing"]

repository = "https://github.com/Sans-Atout/anitomy-rust"

[dependencies]
error-stack = "0.3.1"
regex = "1.8.4"
unicode-normalization = "0.1.22"
